# butler

./: .gitignore  README.txt  butler.py  gaffer.py  log.txt  setup.py
lib/: indented_text_parser.py  scaffold.py
lib/grips/: __init__.py  git_grip.py
lib/scaffold/: __init__.py  scaffold.py  test_scaffold.py
lib/scaffold/testdata/: CMakeLists.txt  cmake1.cmake  cmake1.txt  cmake2.cmake  cmake2.txt
lib/subcommands/: __init__.py  info_cmd.py  removesubmodule_cmd.py  test_cmd.py
